packages/typ/tests/fixtures/diagnostics/0097_core_plus_bool_09.ml.infer.expected
File "0097_core_plus_bool_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0097_core_plus_bool_09 is not a valid module name.

File "0097_core_plus_bool_09.ml", line 2, characters 33-37:
2 | let final = let local = 8 in 1 + true
                                     ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
